[package]
name = "data-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
crc = "3.3.0"
nmea = "0.7.0"
nng = "1.0.1"
rmp-serde = "1.3.0"
rmpv = "1.3.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serialport = { version = "4.8.1", default-features = false }
spidev = "0.7.0"
